Fixed integration issue with Coveralls This was a strange behaviour where the 'coveralls' profile failed when the 'code-coverage' profile did not with the last new test. This is probably due to an memory issue which was solved by the separation between it and test like 'code-coverage' profile does.