@@ -1014,7 +1014,8 @@
                                     <goal>integration-test</goal>
                                 </goals>
                                 <configuration>
-                                    <argLine>-Xmx512m -Xms256m -XX:MaxPermSize=256m -XX:PermSize=128m</argLine>
+                                    <argLine>-Xmx512m -Xms256m -XX:MaxMetaspaceSize=256m -XX:MetaspaceSize=128m
+                                    </argLine>
                                 </configuration>
                             </execution>
                             <execution>
@@ -1129,8 +1130,8 @@
                                     <!-- fork mode must be enable with JaCoCo (1 thread per CPU Core) -->
                                     <reuseForks>true</reuseForks>
                                     <!-- coverage.test.argLine is the link with JaCoCo plug-in -->
-                                    <argLine>${coverage.test.argLine} -Xmx256m -Xms128m -XX:MaxPermSize=128m
-                                        -XX:PermSize=64m
+                                    <argLine>${coverage.test.argLine} -Xmx256m -Xms128m -XX:MaxMetaspaceSize=128m
+                                        -XX:MetaspaceSize=64m
                                     </argLine>
                                 </configuration>
                             </execution>
@@ -1163,8 +1164,8 @@
                                     <!-- fork mode must be enable with JaCoCo (1 thread per CPU Core) -->
                                     <reuseForks>true</reuseForks>
                                     <!-- coverage.it.argLine is the link with JaCoCo plug-in -->
-                                    <argLine>${coverage.it.argLine} -Xmx512m -Xms256m -XX:MaxPermSize=256m
-                                        -XX:PermSize=128m
+                                    <argLine>${coverage.it.argLine} -Xmx512m -Xms256m -XX:MaxMetaspaceSize=256m
+                                        -XX:MetaspaceSize=128m
                                     </argLine>
                                 </configuration>
                             </execution>
@@ -1221,36 +1222,104 @@
                 <plugins>
                     <!-- To compute Code Coverage for integration tests and unit tests -->
                     <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <reportFormat>xml</reportFormat>
+                            <!-- required format for Sonar -->
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
                         <executions>
                             <execution>
-                                <id>prepare-agent</id>
+                                <id>default-test</id>
+                                <phase>test</phase>
                                 <goals>
-                                    <goal>prepare-agent</goal>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>false</skip>
+                                    <forkCount>1</forkCount>
+                                    <!-- fork mode must be enable with JaCoCo (1 thread per CPU Core) -->
+                                    <reuseForks>true</reuseForks>
+                                    <!-- coverage.test.argLine is the link with JaCoCo plug-in -->
+                                    <argLine>${coverage.test.argLine} -Xmx256m -Xms128m -XX:MaxMetaspaceSize=128m
+                                        -XX:MetaspaceSize=64m
+                                    </argLine>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <reportFormat>xml</reportFormat>
+                            <!-- required format for Sonar -->
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>integration-tests</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>false</skip>
+                                    <forkCount>1</forkCount>
+                                    <!-- fork mode must be enable with JaCoCo (1 thread per CPU Core) -->
+                                    <reuseForks>true</reuseForks>
+                                    <!-- coverage.test.argLine is the link with JaCoCo plug-in -->
+                                    <argLine>${coverage.test.argLine} -Xmx512m -Xms256m -XX:MaxMetaspaceSize=256m
+                                        -XX:MetaspaceSize=128m
+                                    </argLine>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>integration-tests-verify</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>verify</goal>
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
                         <configuration>
+                            <dataFile>${jacoco.test.destFile}</dataFile>
                             <excludes>
                                 <!-- Exclude generated sources like JPA model gen -->
                                 <exclude>**/*_*</exclude>
                             </excludes>
                         </configuration>
-                    </plugin>
-                    <!-- We want unit-tests and integration-tests in the report -->
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- If you want code coverage you must run tests -->
-                            <skipTests>false</skipTests>
-                            <!-- We want to count the number of failed tests -->
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <includes>
-                                <include>**/*Test.java</include>
-                                <include>**/*IT.java</include>
-                            </includes>
-                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>prepare-surefire-argLine</id>
+                                <phase>generate-test-resources</phase>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <propertyName>coverage.test.argLine</propertyName>
+                                    <destFile>${jacoco.test.destFile}</destFile>
+                                    <append>true</append>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>prepare-failsafe-argLine</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <propertyName>coverage.test.argLine</propertyName>
+                                    <destFile>${jacoco.test.destFile}</destFile>
+                                    <append>true</append>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                     <!-- To publish code-coverage on Coveralls via Travis-ci -->
                     <plugin>
